--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-
-
-./courses/
-./certifications/
+# Dossier personnel
+courses/
+certifications/
 *.exe
-*.dll
+
+# Dossiers système
+.DS_Store
+Thumbs.db
